include new features to Sign up - index - and their css & js

--- a/css/Sign-Up-style.css
+++ b/css/Sign-Up-style.css
@@ -23,6 +23,7 @@ body {
       background-color: rgb(216, 220, 225);
       margin-bottom: 20px;
       margin-left: 25px;
+      width: clamp(40vw,50vw,60vw);
       }
 
 img {
