--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,6 @@ p {
   padding: 5px;
   margin: 2px;
   /* border: 2px ridge; */
-  align-self: flex-start;
   /* display: block;
     margin-block-start: 1px;
     margin-block-end: 1px;
@@ -26,7 +25,7 @@ header{
 
 header > .part1{
     display: grid;
-    grid-template-columns: 6fr 1fr ;
+    grid-template-columns:  5fr 2fr ;
     margin: 10px;
     margin-bottom: 0;
     gap: 5px;
@@ -43,16 +42,17 @@ input[type='search']{
     border: none;
     border-style: inherit;
     height: 20px;
-    width: clamp(60%,60%,85%);
+    width: clamp(15vw,60%,85%);
 }
-.notifi{
-    display: grid;
-    grid-template-columns: 2fr 1fr 1fr;
+
+.notifi{    
+    display: flex;
     gap: 6px;
 }
+
 header > .part2{
     display: grid;
-    grid-template-columns: 1fr 5fr 4fr;
+    grid-template-columns: 2fr 2fr 6fr;
     margin-top: 0;
 }
 
@@ -60,7 +60,7 @@ header > .part2{
 section{
     grid-column: 1/2;
     grid-row: 1/6;
-    align-items: center;
+
 }
 
 section button{
@@ -79,7 +79,7 @@ section button{
 .grid-title{
     grid-column: 1/2;
     display: grid;
-    grid-template: repeat(3,clamp(2fr,2fr,3fr))  / repeat(3,clamp(1fr,1fr,2fr)) ; 
+    grid-template: 8% 8% 8%  / 30% 30% 30% ; 
     margin: 15px;   
     gap: 10px;
 }
@@ -88,22 +88,28 @@ section button{
     padding: 5px;
     margin-top: 50px;
 }
+/* 
+.grid-itme label , .grid-itme input{
+    width: auto ;
+    overflow: auto;
+    height: 20vw;
+} */
 .grid-itme::before{
     content: "";
-    position: static;
-    width: 5px;
-    height: 100%;
+    position: absolute;
+    width: 3px;
+    height: auto;
     left: 0;
     top: 0;
     background-color:   rgb(235, 207, 51);
 }
-.main .part1{
+.main .part{
     grid-column: 2/2;
-    display: grid;
-    grid-template-rows: 3fr 3fr 3fr;
-    margin-top: 15px;
+    margin-top: 10px;
+    margin-right: 15px;
+
 }
-.main .part1 #p1{
+.main .part #p1{
     border-bottom: 3px solid silver;
     background-color: aliceblue;
     padding: 5px;
@@ -111,10 +117,8 @@ section button{
     border-radius: 5%;
     height: clamp(50vh,auto,20vh);
 }
-.main .part2{
+/* .main .part2{
     grid-column: 2/2;
-    display: grid;
-    grid-template-rows: 3fr 3fr 3fr;
     margin-top: 15px;
 }
 .main .part2 #p2{
@@ -124,27 +128,55 @@ section button{
     box-shadow: 0 3px 3px 0 rgba(0,0,0,0.2), 0 3px 3px 0 rgba(0,0,0,0.19);
     border-radius: 5%;
     height: auto ;
-}
+} */
 
 button{
     cursor: pointer;
     border: none;
     background-color: lightseagreen;
     color: black;
-    padding: 10px 20px;
-    text-align: center;
+    padding: 10px ;
+    /* text-align: start; */
     text-decoration: none;
-    display: inline-block;
-    border-radius: 40% ;
-
+    border-radius: 30% ;
+    /* align-items: center; */
+    margin: 15px;
 }
+
 button:hover {
     box-shadow: 0 3px 3px 0 rgba(0,0,0,0.2), 0 3px 3px 0 rgba(0,0,0,0.19);
 }
+
+
 .svg button{
     cursor: pointer;
     border: none;
     background-color: transparent;
 }
 
+.dash{
+    display: grid;
+    padding: auto;
+}
 
+@media  screen and (max-width : 800px)  {
+    .grid-itme{
+        grid-template: auto auto auto / auto auto auto;
+    }
+
+header > .part1{
+    display: grid;
+    grid-template-columns: 10vw 10vw ;
+    grid-template-rows: 10vw 10vw;
+    margin: 10px;
+    margin-bottom: 0;
+    gap: 5px;
+}
+
+header > .part2{
+    display: grid;
+    grid-template-columns: auto auto auto;
+    margin-top: 0;
+}
+
+}
